[project]
name = "triesus"
version = "0.1.0"
authors = [
  { name="Alessandro Lussana", email="alessandro.lussana@proton.me" },
]
description = "Find the Smallest Unique Subset (SUS)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alussana/TrieSUS"
"Bug Tracker" = "https://github.com/alussana/TrieSUS/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
